--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
   
   <dependencies>
         <dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-util</artifactId>
+      		<version>0.0.1-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
       		<groupId>junit</groupId>
       		<artifactId>junit</artifactId>
       		<version>3.8.1</version>
