--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,38 @@
   <dependencies>
         <dependency>
       		<groupId>szgm</groupId>
+      		<artifactId>szgm-accountancy</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-contractor</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-settings</artifactId>
+      		<version>0.0.1-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-stats</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
+      		<groupId>szgm</groupId>
       		<artifactId>szgm-util</artifactId>
       		<version>0.0.1-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-ware</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    	</dependency>
+        <dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-warehouse</artifactId>
+      		<version>1.0-SNAPSHOT</version>
     	</dependency>
         <dependency>
       		<groupId>junit</groupId>
@@ -103,17 +133,25 @@
   
   <build>
     <finalName>SZGM</finalName>
-    
     <plugins>
-       <plugin>
-           <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-compiler-plugin</artifactId>
-           <version>2.3.1</version>
-           <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
-           </configuration>
-       </plugin>
+    	<plugin>
+           	<groupId>org.apache.maven.plugins</groupId>
+           	<artifactId>maven-compiler-plugin</artifactId>
+           	<version>2.3.1</version>
+           	<configuration>
+            	<source>1.6</source>
+               	<target>1.6</target>
+           	</configuration>
+       	</plugin>
+       	<plugin>
+    		<groupId>org.liquibase</groupId>
+    		<artifactId>liquibase-maven-plugin</artifactId>
+    		<version>3.0.8</version>
+    		<configuration>
+        		<changeLogFile>src/main/resources/config/database/db.changelog.xml</changeLogFile>
+        		<propertyFile>src/main/resources/config/database/liquibase.properties</propertyFile>
+    		</configuration>
+		</plugin>
     </plugins>
   </build>
 </project>
