--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       		<artifactId>szgm-stats</artifactId>
       		<version>1.0-SNAPSHOT</version>
     	</dependency>
+    	<dependency>
+      		<groupId>szgm</groupId>
+      		<artifactId>szgm-user</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    	</dependency>
         <dependency>
       		<groupId>szgm</groupId>
       		<artifactId>szgm-util</artifactId>
@@ -143,6 +148,12 @@
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
   </dependencies>
   
