--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,7 +74,7 @@
     
 <!--     Welcome File  -->
     <welcome-file-list>
-        <welcome-file>/pages/index/index.jsp</welcome-file>
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 <!--     Welcome File End -->
 </web-app>
