--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
 			<artifactId>primefaces</artifactId>
 			<version>3.5</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+            
 	</dependencies>
 
 
