--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 	<url>http://maven.apache.org</url>
 
 	<repositories>
-<repository>  
-    <id>prime-repo</id>  
-    <name>PrimeFaces Maven Repository</name>  
-    <url>http://repository.primefaces.org</url>  
-    <layout>default</layout>  
-</repository> 
+		<repository>  
+		    <id>prime-repo</id>  
+   			<name>PrimeFaces Maven Repository</name>  
+    		<url>http://repository.primefaces.org</url>  
+    		<layout>default</layout>  
+		</repository> 
 	</repositories>
 
 	<properties>
@@ -24,12 +24,12 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
+	    <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -64,6 +64,13 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
@@ -130,11 +137,28 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk14</artifactId>
+			<version>1.43</version>
+		</dependency>
+            
+		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
 		</dependency>
-            
+		
+        <dependency>
+   			<groupId>commons-fileupload</groupId>
+   			<artifactId>commons-fileupload</artifactId>
+   			<version>1.2.1</version>
+		</dependency>
+        
+        <dependency> 
+  			<groupId>org.apache.commons</groupId>
+  			<artifactId>commons-io</artifactId> 
+  			<version>1.3.2</version> 
+		</dependency>
 	</dependencies>
 
 
@@ -148,6 +172,25 @@
 	<build>
 		<finalName>SZGM</finalName>
 		<plugins>
+		    <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>1.10</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>wsimport</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <wsdlUrls>
+                        <wsdlUrl>http://localhost:8085/WS/ParagonySerwis?wsdl</wsdlUrl>
+                    </wsdlUrls>
+                    <sourceDestDir>${project.build.directory}/generated</sourceDestDir>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -158,6 +201,25 @@
 				</configuration>
 			</plugin>
 			<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<version>3.0.8</version>
@@ -166,6 +228,27 @@
 					<propertyFile>src/main/resources/szgm/config/database/liquibase.properties</propertyFile>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>com.pyx4me</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <executions>
+                   <execution>
+                       <phase>package</phase>
+                       <goals><goal>proguard</goal></goals>
+                   </execution>
+                </executions>
+                <configuration>
+                    <obfuscate>true</obfuscate>
+                    <injar>${project.build.finalName}.war</injar>
+                    <outjar>${project.build.finalName}-small.war</outjar>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <proguardInclude>${basedir}/proguard.conf</proguardInclude>
+                    <libs>
+                        <lib>${java.home}/lib/rt.jar</lib>
+                        <lib>${java.home}/lib/jsse.jar</lib>
+                    </libs>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
