--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,16 +10,13 @@
  	<display-name>System Zarzadzania Gospodarka Magazynowa</display-name>
     
         
-    <!-- Integrate JSF and Spring -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     <listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
-    <!-- Integrate JSF and Spring End-->
     
-    <!-- CONFIGURATION FILES both Bean definition and security -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
@@ -28,19 +25,17 @@
                 /WEB-INF/classes/szgm/config/spring/beans/jsfspring-sec-security-config.xml
         </param-value>
     </context-param>
-    <!-- CONFIGURATION FILES END HERE -->
     
-    <!-- PROJECT STAGE START FOR DEVELOPEMENT MARK IT AS DEVELOPMENT, FOR TESTING, UAT, PRODUCTION REMOVE THIS -->
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    <!-- PROJECT STAGE END -->
     
-    <!-- Enable JSF Servlet -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <servlet-class>
+        	javax.faces.webapp.FacesServlet
+        </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
      
@@ -56,25 +51,33 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-    <!-- Enable JSF Server End-->
     
-<!--     Enable Spring Filter, Spring Security works on the concept of Filters -->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>
             org.springframework.web.filter.DelegatingFilterProxy
         </filter-class>
     </filter>
-     
+    
+    <filter>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<filter-class>
+			org.primefaces.webapp.filter.FileUploadFilter
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+    
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-<!--     Enable Spring Filter End -->
     
-<!--     Welcome File  -->
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
-<!--     Welcome File End -->
+
 </web-app>
